# FlowEvo

./: .gitignore  README.md  flow_tts_controller_implementation_spec.md  pyproject.toml
flow_autotts/: __init__.py
flow_autotts/controllers/: __init__.py  base.py  baselines.py  optimal.py  optimal.template.py
flow_autotts/core/: __init__.py  env.py  errors.py  model_api.py  state.py  trajectory.py
flow_autotts/eval/: discovery.py  metrics.py  prompts.py  runner.py
flow_autotts/experiments/: __init__.py
flow_autotts/experiments/eight_gaussians/: __init__.py  dataset.py  harness.py  model.py
flow_autotts/experiments/pickscore_sd35/: __init__.py  dataset.py  env.py  harness.py  merge_shards.py  parallel_eval.py  run_workflow.sh  scoring.py
flow_autotts/experiments/pickscore_sd35/prompts/: proposer_prompt.txt  proposer_prompt_autotts.txt
flow_autotts/workflow/: __init__.py  __main__.py  codex_proposer.py  runner.py
tests/: test_baseline_controllers.py  test_budget_and_logging.py  test_eight_gaussians_smoke.py  test_env_actions.py  test_metrics.py  test_pickscore_sd35_harness.py  test_workflow.py
