[project]
name = "flow-autotts"
version = "0.1.0"
description = "AutoTTS-style controller discovery for flow-matching samplers."
readme = "flow_tts_controller_implementation_spec.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
sd35 = [
    "accelerate>=1.0.0",
    "diffusers>=0.35.0",
    "peft>=0.13.0",
    "pillow>=10.0.0",
    "protobuf>=4.25.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
    "transformers>=4.55.0",
]
